Fix nav overflow

--- a/src/layouts/Header/index.module.css
+++ b/src/layouts/Header/index.module.css
@@ -10,6 +10,7 @@
     width: 100%;
     position: relative;
     color: var(--navbar-color); 
+    overflow: hidden;
 
 }
 .section{
